<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="4dp"
    app:cardCornerRadius="4dp"
    app:contentPadding="8dp"
    app:cardUseCompatPadding="true"
    android:layout_margin="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/label_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/id_student"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/label_id"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_nama"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nama1"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_id" />

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/name"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/label_nama"
            app:layout_constraintTop_toBottomOf="@id/tv_id" />

        <TextView
            android:id="@+id/label_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/email1"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label_nama" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/email"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/label_email"
            app:layout_constraintTop_toBottomOf="@id/tv_nama" />

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon_delete"
            android:src="@drawable/delete_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon_edit"
            android:src="@drawable/edit_24"
            app:layout_constraintBottom_toBottomOf="@id/tv_email"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>